--- a/style.css
+++ b/style.css
@@ -114,7 +114,6 @@ main {
     align-items: center;
     justify-content: center;
     text-align: center;
-    padding: 20Spx;
 }
 
 .flipbox-front {
@@ -210,5 +209,10 @@ footer {
     .profile-photo {
         width: 100px;
         height: 100px;
+    }
+
+    .projects-container {
+        display: block;
+        width: 100%;
     }
 }
